@@ -33,6 +33,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
  <notes>
+* [jan] Officially support PHP 7.
 * [jan] Fix time offsets when importing CSV data with two-digit years.
 * [jan] Fix updating and deleting events from external CalDAV servers (martin1@k0k.net, Bug #14021).
 * [jan] Fix exporting multiple tags to iCalendar CATEGORIES (Bug #14057).
@@ -802,8 +803,8 @@
   <required>
    <php>
     <min>5.3.0</min>
-    <max>6.0.0alpha1</max>
-    <exclude>6.0.0alpha1</exclude>
+    <max>8.0.0alpha1</max>
+    <exclude>8.0.0alpha1</exclude>
    </php>
    <pearinstaller>
     <min>1.7.0</min>
@@ -819,8 +820,8 @@
     <name>horde</name>
     <channel>pear.horde.org</channel>
     <min>5.0.0</min>
-    <max>6.0.0alpha1</max>
-    <exclude>6.0.0alpha1</exclude>
+    <max>8.0.0alpha1</max>
+    <exclude>8.0.0alpha1</exclude>
    </package>
    <package>
     <name>Horde_Auth</name>
@@ -2805,6 +2806,7 @@
    <date>2017-08-01</date>
    <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
    <notes>
+* [jan] Officially support PHP 7.
 * [jan] Fix time offsets when importing CSV data with two-digit years.
 * [jan] Fix updating and deleting events from external CalDAV servers (martin1@k0k.net, Bug #14021).
 * [jan] Fix exporting multiple tags to iCalendar CATEGORIES (Bug #14057).
